multi_index_map_derive2/tests/ui/extra_arguments.stderr
error: expected `,`
 --> tests/ui/extra_arguments.rs:5:25
  |
5 |     #[multi_index(ByKey = unexpected)]
  |                         ^

error: MultiIndexMap2 requires at least one #[multi_index(Accessor, ...)] field
 --> tests/ui/extra_arguments.rs:4:8
  |
4 | struct ExtraArguments {
  |        ^^^^^^^^^^^^^^
